# WeatherDashboard

./: .gitignore  CMakeLists.txt  Makefile  README.md
cpp-backend/: CMakeLists.txt  main.cpp  main.hpp  server.cpp  server.hpp  weather.proto
docs/html/: annotated.html  classWeatherServiceImpl-members.html  classWeatherServiceImpl.html  classWeatherServiceImpl__inherit__graph.dot  classes.html  dir_5cc9ca85fa85122c9a5b0c1e18c75e54.html  dir_a0661a96de826561415751c61f7382c1.html  dir_c1d4644b987a6b7985830a0b6a8b3530.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherits.html  md_other_api_reference.html  md_other_getting_started.html  md_other_installation.html  md_react_frontend_README.html  pages.html  server_8cpp.html  server_8cpp__incl.dot  server_8hpp.html  server_8hpp__dep__incl.dot  server_8hpp__incl.dot  server_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  functions_0.js  (+8 more)
docs/latex/: annotated.tex  classWeatherServiceImpl.tex  classWeatherServiceImpl.tex.tmp  classWeatherServiceImpl__inherit__graph.dot  files.tex  hierarchy.tex  index.tex  md_other_api_reference.tex  md_other_getting_started.tex  md_other_installation.tex  md_react_frontend_README.tex  refman.tex  server_8cpp.tex  server_8cpp__incl.dot  server_8hpp.tex  server_8hpp__dep__incl.dot  server_8hpp__incl.dot
other/: Doxyfile  api_reference.md  download_libs.sh  getting_started.md  installation.md  mainpage.md
react-frontend/: deploy.sh  envoy.yaml  package.json  tsconfig.json
react-frontend/public/: index.html  manifest.json  style.css
react-frontend/src/: App.css  App.tsx  WeatherClient.css  WeatherClient.tsx  WeatherDisplay.css  WeatherDisplay.tsx  countryTranslations.ts  index.tsx  types.tsx
(+8 files in other folders)
